src/test/resources/semantic/custom/reject/multiplyChar.ul
void main() {
}

void foo() {
    boolean result;
    result = 'c' * 'd';
}
